Fix banner on mobile layout

--- a/css/site.css
+++ b/css/site.css
@@ -5,17 +5,15 @@
 /* Banner */
 
 #banner-wrapper {
-  height: 390px;
-  width: 970px;
+  max-height: 390px;
+  max-width: 970px;
   background-image: url("../img/banner.jpg");
-  background-size: 100% 100%;
 }
 
 #banner-wrapper-min {
-  height: 260px;
-  width: 970px;
+  max-height: 260px;
+  max-width: 970px;
   background-image: url("../img/banner-min.jpg");
-  background-size: 100% 100%;
 }
 
 .vcenter {
